<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.project4.authentication.signup.domain.SignupViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:id="@+id/tv_login_screen_highlighted_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/signup_highlighted_label"
            android:layout_marginTop="50dp"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email_hint"
            style="@style/text_input_layout_style"
            app:errorMessage="@{@string/email_validation_error}"
            app:shouldDisplayError="@{viewModel.shouldValidateFields &amp;&amp; !viewModel.isEmailValid()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_screen_highlighted_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{(text,start,before,count) -> viewModel.setEmail(text.toString())}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_password_hint"
            style="@style/text_input_layout_style"
            app:errorMessage="@{@string/password_validation_error}"
            app:shouldDisplayError="@{viewModel.shouldValidateFields &amp;&amp; !viewModel.isPasswordValid()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:onTextChanged="@{(text,start,before,count) -> viewModel.setPassword(text.toString())}"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:text="@string/signup_button_label"
            android:onClick="@{(v) -> viewModel.onClickSignUp()}"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            app:backgroundTint="@color/colorAccent"
            android:onClick="@{(v) -> viewModel.navigateToLogin()}"
            android:text="@string/signup_login_button_label"
            app:layout_constraintTop_toTopOf="@+id/btn_signup"
            app:layout_constraintStart_toEndOf="@+id/btn_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_signup"
            app:layout_constraintVertical_bias="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>